<resources>
    <string name="app_name">Note.me</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="done">Done</string>
    <string name="view1">Find People View</string>
    <string name="view2">Home View</string>
    <string name="lang">Language</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="add">Add</string>
    <string name="e_star">Empty Star</string>
    <string name="subtitle">Subtitle</string>
    <string name="date">Date</string>
    <string name="language">Choose your language</string>
    <string-array name="a_languages">
        <item> Basque </item>
        <item> Spanish </item>
        <item> English </item>
    </string-array>

</resources>
