<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/LblTitulo"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/rb_item"
        android:layout_toStartOf="@+id/rb_item"
        android:hint="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LblSubTitulo"
        android:hint="@string/subtitle"
        android:layout_below="@id/LblTitulo"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:textSize="12sp"
        android:textStyle="normal" />

    <RatingBar
        android:id="@+id/rb_item"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:numStars="3" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LblSubTitulo"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>