<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_alignStart="@+id/tv_title"
        android:layout_below="@+id/tv_title"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_alignStart="@+id/tv_title"
        android:layout_below="@+id/et_title"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="42dp"
        android:text="@string/priority" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_alignStart="@+id/tv_title"
        android:layout_below="@+id/tv_priority"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_description"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:isIndicator="false"
        android:id="@+id/ratingBar"
        android:numStars="3"
        android:stepSize="1"
        android:layout_alignTop="@+id/tv_priority"
        android:layout_alignRight="@+id/et_title"
        android:layout_alignEnd="@+id/et_title" />
</RelativeLayout>
